@@ -139,6 +139,60 @@ class TestRecipeBuilder(TestCase):
                 """) % repr(expected_recipe_command),
             mock_stdout.getvalue())
 
+    def test_buildTree_brz(self):
+        def fake_bzr(args):
+            if args["args"][1] == "version":
+                print("brz version x.y.z")
+                return {}
+            elif args["args"][1] == "plugins":
+                print("brz-plugin x.y.z")
+                return {}
+            else:
+                return {"returncode": 1}
+
+        def fake_brz_build_daily_recipe(args):
+            print("dummy recipe build")
+            os.makedirs(os.path.join(self.builder.tree_path, "foo"))
+            return {}
+
+        processes_fixture = self.useFixture(FakeProcesses())
+        processes_fixture.add(
+            lambda _: {"stdout": io.StringIO(u"5.10\n")}, name="sudo")
+        processes_fixture.add(fake_bzr, name="bzr")
+        processes_fixture.add(
+            fake_brz_build_daily_recipe, name="brz-build-daily-recipe")
+        with open(os.path.join(self.builder.work_dir, "recipe"), "w") as f:
+            f.write("dummy recipe contents\n")
+        mock_stdout = six.StringIO()
+        self.useFixture(MockPatch("sys.stdout", mock_stdout))
+        self.useFixture(MockPatchObject(
+            self.builder, "_find_on_path",
+            side_effect=lambda command: command == "brz-build-daily-recipe"))
+        self.assertEqual(0, self.builder.buildTree())
+        self.assertEqual(
+            os.path.join(self.builder.work_dir_relative, "tree", "foo"),
+            self.builder.source_dir_relative)
+        expected_recipe_command = [
+            "brz-build-daily-recipe", "--safe", "--no-build",
+            "--manifest", os.path.join(self.builder.tree_path, "manifest"),
+            "--distribution", "grumpy", "--allow-fallback-to-native",
+            "--append-version", u"~ubuntu5.10.1",
+            os.path.join(self.builder.work_dir, "recipe"),
+            self.builder.tree_path,
+            ]
+        self.assertEqual(
+            dedent("""\
+                Bazaar versions:
+                brz version x.y.z
+                brz-plugin x.y.z
+                Building recipe:
+                dummy recipe contents
+
+                RUN %s
+                dummy recipe build
+                """) % repr(expected_recipe_command),
+            mock_stdout.getvalue())
+
     def test_buildTree_bzr(self):
         def fake_bzr(args):
             if args["args"][1] == "version":
@@ -162,6 +216,8 @@ class TestRecipeBuilder(TestCase):
             f.write("dummy recipe contents\n")
         mock_stdout = six.StringIO()
         self.useFixture(MockPatch("sys.stdout", mock_stdout))
+        self.useFixture(MockPatchObject(
+            self.builder, "_find_on_path", return_value=False))
         self.assertEqual(0, self.builder.buildTree())
         self.assertEqual(
             os.path.join(self.builder.work_dir_relative, "tree", "foo"),
